<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Standup Timer</string>
   <string name="timer">Timer</string>

   <string name="number_of_participants">Number of participants</string>
   <string name="length_of_meeting">Length of meeting</string>
   <string name="start">Start</string>
   <string name="quit">Quit</string>

   <string name="five_min">5 min</string>
   <string name="ten_min">10 min</string>
   <string name="fifteen_min">15 min</string>
   <string name="twenty_min">20 min</string>

   <string name="valid_num_participants_warning">Number of participants must be between 2 and 20.</string>
   <string name="ok">OK</string>

   <string name="participant">Participant</string>
   <string name="individual_status_complete">Individual status complete</string>
   <string name="total_time_remaining">Total time remaining</string>
   <string name="next">Next</string>
   <string name="finished">Finished</string>

   <string name="settings_label">Settings</string>
   <string name="settings_title">Standup Timer Settings</string>
   <string name="play_sounds">Play sounds</string>
   <string name="play_sounds_summary">Play sounds when time is running out</string>
   <string name="warning_time">Warning time</string>
   <string name="warning_time_summary">When to notify participants time is running out</string>

   <string name="about_label">About</string>
   <string name="about_title">About Standup Timer</string>
   <string name="about_text">\
Standup Timer is a simple application that can be
used to keep your stand-up meetings on track.
Simply specify the number of participants and the
meeting length, and press <b>Start</b> to get
started. On the timer screen, press <b>Next</b>
to restart the timer for a new meeting participant,
or <b>Finish</b> to stop the timer.
   </string>
</resources>
